@@ -2,11 +2,11 @@ config test_conf {
 	enum week_t { MON, TUE, WED, THU, FRI, SAT, SUN }
 	enum fruit_t { Apple, Orange, Peach, Lemon }
 
-	required int_val	: int;
-   	required bool_val	: bool;
+	required mutable int_val: int;
+   	required const bool_val : bool;
 	required week_val	: week_t;
-	optional string_val	: string;
-	optional real_val	: real;
+	optional mutable string_val: string;
+	optional const real_val	: real;
 	required string_list	: list<string>;
 	required string0_list	: list[0]<string>;
 	required int1_list	: list[1]<int>;
